--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-18 [歪脑｜在台流亡藏人身份困境：和台湾有“共同敌人”，却也不被看做“自己人”](/articles/cdt/341555.md)
+
 4-18 [金宏伟｜律师又又又被报警了](/articles/cdt/341560.md)
 
 4-18 [奇途无障碍｜轮椅出行遇到石墩子，该如何维权？](/articles/cdt/341562.md)
@@ -598,6 +600,4 @@
 3-14 [【立此存照】中国外交部｜美国所谓“言论自由”的事实真相](/articles/cdt/342658.md)
 
 3-14 [【404文库】风慢慢｜赶走记者！整个鲁镇洋溢着正义的呼声](/articles/cdt/342660.md)
-
-3-14 [我遭遇了性别歧视｜一个新闻菜鸟和“新黄色新闻”的同床异梦](/articles/cdt/342662.md)
 
