--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [美国NASA局长：中国很多所谓的“民用太空计划”其实都是军事计划](/articles/voa/1016301.md)
+
 4-18 [美国首次在印太部署中程导弹，军力提升的又一里程碑](/articles/voa/1016302.md)
 
 4-18 [有报道说布林肯下周访中国；美官员：他将提出对中国支持俄罗斯国防产业的关切](/articles/voa/1016303.md)
@@ -598,6 +600,4 @@
 4-6 [耶伦与何立峰结束“广泛而富有成果”的会晤，美中宣布两项新的合作倡议](/articles/voa/1016599.md)
 
 4-6 [专访陶杰：从香港文化产业的起落看中港互动](/articles/voa/1016600.md)
-
-4-6 [中国学者诉佛州政府案引发地方涉国家安全法律合宪性讨论](/articles/voa/1016601.md)
 
