--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-18 [美中貿易戰再起？北京批301調查「一錯再錯」](/articles/dw/1025870.md)
+
 4-18 [美國會將表決外國援助法案 拜登：對世界表態](/articles/dw/1025871.md)
 
 4-18 [拜登呼吁将中国钢铁和铝的关税提高为三倍](/articles/dw/1025872.md)
@@ -598,6 +600,4 @@
 3-24 [黑暗料理还是创新美食？用昆虫做披萨](/articles/dw/1026168.md)
 
 3-23 [俄称再夺一村 暗指乌克兰和恐袭有关](/articles/dw/1026169.md)
-
-3-23 [德语媒体：中国影响力扩大之恶果](/articles/dw/1026170.md)
 
