--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-18 [美国“封杀”TikTok对“开放互联网”意味着什么](/articles/nyt/1042849.md)
+
 4-18 [美国国家安全局：中国试图入侵美国关键基础设施](/articles/nyt/1042850.md)
 
 4-18 [面对中国罕见的核谈判邀请，美国该怎么做](/articles/nyt/1042851.md)
@@ -598,6 +600,4 @@
 1-10 [日航和阿拉斯加航空事故“奇迹”的真相](/articles/nyt/1043147.md)
 
 1-10 [“中国法学界的良心”江平逝世，毕生坚定倡导法治](/articles/nyt/1043148.md)
-
-1-10 [美国防部长患病手术住院白宫均不知情引发争议](/articles/nyt/1043149.md)
 
