--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [布林肯预计即将访问中国，美国务院尚未宣布具体日期](/articles/voa/1016286.md)
+
 4-19 [肯尼亚总统：肯军队首领因直升机坠毁遇难](/articles/voa/1016287.md)
 
 4-19 [欧盟最高外交官呼吁七国集团加快向乌克兰提供防空武器并扩大对伊朗制裁](/articles/voa/1016288.md)
@@ -598,6 +600,4 @@
 4-7 [卡梅隆警告以色列：英国的支持并非是无条件的](/articles/voa/1016584.md)
 
 4-7 [韩联社：美军将在印太部署“标准-6”防空和“战斧”巡航导弹陆基发射系统](/articles/voa/1016585.md)
-
-4-7 [世界媒体看中国: 经济走势又如何](/articles/voa/1016586.md)
 
